# mirror-komiku

./: .gitattributes  .gitignore  LICENSE  README.md  metadata.md
.github/: repository-metadata.json
.github/workflows/: ci.yml  repository-metadata.yml  rust-docker-test.yml  rust-release.yml
versions/: fullstack-proxy-agent-prompt.txt
versions/minimal/: README.md  SELECTORS.md  styles.css
versions/rust-server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.standard  README.md  ai_agent_prompt_manga_mirror_architecture.md  flow.md  note_dev.md
versions/rust-server/src/application/: chapter_service.rs  mod.rs  ws_hub.rs
versions/rust-server/src/domain/: models.rs  parser.rs
versions/rust-server/src/infrastructure/: cleanup.rs  html.rs  network.rs  target.rs
versions/rust-server/src/presentation/: http.rs  ws.rs
versions/rust-vanilla/: .gitignore  Dockerfile.clodflare_tunnel
versions/rust-vanilla/scripts/: load_test.sh
versions/rust-vanilla/src/: config.rs  main.rs
versions/rust-vanilla/src/application/: chapter_service.rs  state.rs  ws_hub.rs
versions/rust-vanilla/src/domain/: parser.rs
versions/rust-vanilla/src/infrastructure/: image.rs  mod.rs  security.rs  storage.rs
versions/static/: README.md  app.js  index.html  styles.css
versions/static/edge-functions/api/: proxy.js
versions/svelte-rust/: .dockerignore  .gitignore  Dockerfile  README.md
versions/svelte-rust/backend/: Cargo.toml
versions/svelte-rust/backend/src/: main.rs
versions/svelte-rust/backend/src/providers/: mod.rs
versions/svelte-rust/backend/src/providers/komiku/: mod.rs
versions/svelte-rust/backend/src/proxy/: fetcher.rs  mod.rs
versions/svelte-rust/backend/src/routes/: health.rs  mod.rs  proxy.rs
versions/svelte-rust/backend/src/utils/: base64url.rs  errors.rs  mod.rs  url_guard.rs
versions/svelte-rust/docker/: nginx.default.conf  start.sh
versions/svelte-rust/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
versions/svelte-rust/frontend/src/: App.svelte  app.css
versions/svelte-rust/frontend/src/db/: cache.ts
versions/svelte-rust/frontend/src/lib/: base64url.ts  routing.ts
versions/svelte-rust/shared/url-encode-utils/: base64url.rs  base64url.ts
(+14 files in other folders)
