[package]
name = "mirror-komiku"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-ws = "0.3"
anyhow = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["avif", "gif", "jpeg", "png", "webp"] }
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "http2", "json", "rustls-tls"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
