[package]
name = "mirror-komiku"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-ws = "0.4"
anyhow = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["avif", "gif", "jpeg", "png", "webp"] }
percent-encoding = "2.3"
reqwest = { version = "0.13", default-features = false, features = ["brotli", "deflate", "gzip", "http2", "json", "rustls"] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
