[package]
name = "mirror-komiku-proxy"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"

[dependencies]
actix-cors = "0.7"
actix-web = "4.11"
base64 = "0.22"
bytes = "1.10"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
